chore: Run the node in a separate container in Otter (#20626)
Signed-off-by: Kelly Greco <kelly@swirldslabs.com>