@@ -2,6 +2,12 @@
 package org.hiero.otter.fixtures.container;
 
 import static org.hiero.otter.fixtures.container.ContainerNetwork.NODE_IDENTIFIER_FORMAT;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.CONTAINER_APP_WORKING_DIR;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.CONTAINER_CONTROL_PORT;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.NODE_COMMUNICATION_PORT;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.getContainerControlDebugPort;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.getJavaToolOptions;
+import static org.hiero.otter.fixtures.container.utils.ContainerConstants.getNodeCommunicationDebugPort;
 
 import com.hedera.hapi.platform.state.NodeId;
 import edu.umd.cs.findbugs.annotations.NonNull;
@@ -15,25 +21,6 @@ import org.testcontainers.images.builder.ImageFromDockerfile;
  * containers. It connects the container to the provided Docker {@link Network}.
  */
 public class ContainerImage extends GenericContainer<ContainerImage> {
-
-    /**
-     * The port to open to allow connections to the
-     * {@link org.hiero.otter.fixtures.container.proto.ContainerControlServiceGrpc}
-     */
-    public static final int CONTAINER_CONTROL_PORT = 8080;
-
-    /**
-     * The port to open to allow connections to the
-     * {@link org.hiero.otter.fixtures.container.proto.NodeCommunicationServiceGrpc}
-     */
-    public static final int NODE_COMMUNICATION_PORT = 8081;
-
-    /**
-     * Working directory of the container
-     */
-    public static final String APP_ROOT_DIR = "/opt/DockerApp";
-
-    private static final int BASE_DEBUG_PORT = 5005;
 
     /**
      * Constructs a new container instance and exposed the debug port as {@code 5005 + selfId}.
@@ -51,7 +38,8 @@ public class ContainerImage extends GenericContainer<ContainerImage> {
         super(dockerImage);
 
         final String alias = String.format(NODE_IDENTIFIER_FORMAT, selfId.id());
-        final int debugPort = BASE_DEBUG_PORT + (int) selfId.id();
+        final int containerControlDebugPort = getContainerControlDebugPort(selfId);
+        final int nodeCommunicationDebugPort = getNodeCommunicationDebugPort(selfId);
 
         // Apply the common configuration expected by tests.
         // By default, the container wait for all ports listed, but we only want it to wait for the
@@ -60,17 +48,12 @@ public class ContainerImage extends GenericContainer<ContainerImage> {
         withNetwork(network)
                 .withNetworkAliases(alias)
                 .withExposedPorts(CONTAINER_CONTROL_PORT, NODE_COMMUNICATION_PORT)
-                .waitingFor(Wait.forListeningPorts(CONTAINER_CONTROL_PORT, debugPort));
+                .waitingFor(Wait.forListeningPorts(CONTAINER_CONTROL_PORT, containerControlDebugPort));
 
-        withEnv("JAVA_TOOL_OPTIONS", getJavaToolOptions(debugPort));
-        addFixedExposedPort(debugPort, debugPort);
+        withEnv("JAVA_TOOL_OPTIONS", getJavaToolOptions(containerControlDebugPort));
+        addFixedExposedPort(containerControlDebugPort, containerControlDebugPort);
+        addFixedExposedPort(nodeCommunicationDebugPort, nodeCommunicationDebugPort);
 
-        withWorkingDirectory(APP_ROOT_DIR);
-    }
-
-    private static String getJavaToolOptions(final int debugPort) {
-        return String.format(
-                "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:%s -Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener",
-                debugPort);
+        withWorkingDirectory(CONTAINER_APP_WORKING_DIR);
     }
 }
